<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Today, June 24</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">40299</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_lable">Units</string>
    <string name="pref_units_default" translateble="false">metric</string>
    <string name="pref_units_dialog_title">Pick your Units</string>
    <string name="action_location_on_map">View location on Map</string>
    <string name="share">Share</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>,
        <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>
    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>
    <string name="pref_notifications_key">notifications</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_summary_off">Check to enable notifications</string>
    <string name="pref_notifications_summary_on">Uncheck to disable notifications</string>
    <string name="pref_notifications_default" translatable="false">true</string>
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No Weather Information Available. The network is not available to fetch weather data</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="empty_forecast_list_location_status_unknown">Unknown location status</string>
    <string name="empty_forecast_list_location_server_down">Server Down</string>
    <string name="empty_forecast_list_location_server_invalid">Invalid Server responce</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="url_string">urlPlaceholder</string>
    <string name="pref_packs_key">packs</string>
    <string name="pref_packs_title">Icon Packs</string>
    <string name="title_widget_today">Today</string>
    <string name="title_widget_ten_days">Ten Days Weather</string>
</resources>
